# nairn-mpm-fea

./: .gitignore  CMakeLists.txt  README.md  README.txt  README_FORK.md
Common/: CMakeLists.txt  replace_stdafx.py
Common/Elements/: CSTriangle.cpp  CSTriangle.hpp  ElementBase.cpp  ElementBase.hpp  FourNodeIsoparam.cpp  FourNodeIsoparam.hpp  Lagrange2D.cpp  Lagrange2D.hpp  Linear2D.cpp  Linear2D.hpp  Quad2D.cpp  Quad2D.hpp
Common/Exceptions/: CommonException.cpp  CommonException.hpp
Common/Headers/: stdafx.h
Common/Materials/: Elastic.cpp  Elastic.hpp  IsotropicMat.cpp  IsotropicMat.hpp  MaterialBase.cpp  MaterialBase.hpp  Orthotropic.cpp  Orthotropic.hpp  TransIsotropic.cpp  TransIsotropic.hpp
Common/Nodes/: NodalPoint.cpp  NodalPoint.hpp  NodalPoint2D.cpp  NodalPoint2D.hpp  NodalPoint3D.cpp  NodalPoint3D.hpp
Common/Projects/NairnMPM.xcodeproj/: nairnj.mode1v3  nairnj.pbxuser  project.pbxproj
Common/Projects/NairnMPMOld.xcodeproj/: project.pbxproj
Common/Read_XML/: ArcController.cpp  Atomic.cpp  Atomic.hpp  BMPLevel.cpp  BMPLevel.hpp  BitMapFilesCommon.cpp  BoxController.cpp  BoxController.cpp_  BoxController.hpp  CommonReadHandler.cpp  CommonReadHandler.cpp_  CommonReadHandler.hpp  ElementsController.cpp  ElementsController.cpp_  ElementsController.hpp  Expression.cpp  Expression.cpp_  Expression.hpp  HashString.cpp  HashString.hpp  LineController.cpp  LineController.hpp  MaterialController.cpp  MaterialController.cpp_  MaterialController.hpp  NodesController.cpp  NodesController.hpp  OvalController.cpp  OvalController.hpp  ParseController.cpp  ParseController.cpp_  ParseController.hpp  PointController.cpp  PointController.hpp  PolygonController.cpp  PolygonController.hpp  RectController.cpp  RectController.hpp  ShapeController.cpp  ShapeController.cpp_  (+11 more)
Common/System/: CommonAnalysis.cpp  CommonAnalysis.hpp  CommonArchiveData.cpp  CommonArchiveData.hpp  CommonTask.cpp  CommonTask.cpp_  CommonTask.hpp  CommonUtilities.cpp  CommonUtilities.cpp_  DataTypes.hpp  Gauss.cpp  LinkedObject.cpp  LinkedObject.hpp  Matrix3.cpp  Matrix3.hpp  Matrix4.cpp  Matrix4.hpp  Spline2D.cpp  Spline2D.hpp  UnitsController.cpp  UnitsController.hpp  main.cpp  svninfo.cpp
NairnMPM/: CMakeLists.txt
NairnMPM/input/: Compression_MM_2mm_rhoscaling_v1.fmcmd  ExtractMPMUltimate6  FSP_2D_new_v6.fmcmd  HPT_3D_v9.fmcmd  LinuxGpuScript.pbs  MPMDCB.fmcmd  NairnMPM  NairnMPM.dtd  Tension.fmcmd  TwoDisks.fmcmd
NairnMPM/input/Mac Command Files/: HEGas.fmcmd  HETension.fmcmd  HomogenousDeformation.fmcmd  MPMDCB.fmcmd  RadialPressureDisk.fmcmd  ReadMe.txt  TensionGeneral.fmcmd
NairnMPM/input/Scripted_Input/: AxialLoadCylinder.fmcmd  CylinderSphere.fmcmd  DCBFracture.fmcmd  HECarnot.fmcmd  HEGas.fmcmd  HEShear.fmcmd  HETension.fmcmd  HypoTension.fmcmd  MPMDCB.fmcmd  PennyCrack.fmcmd  RadialPressureDisk.fmcmd  TwoDisks.fmcmd
NairnMPM/input/Test-Suite/: MPMDCB.txt  TwoDisks.txt  TwoDisksMM.txt
NairnMPM/input/XML_Input/: MPMDCB.fmcmd
NairnMPM/src/: CMakeLists.txt  replace_stdafx.py
NairnMPM/src/Boundary_Conditions/: BoundaryCondition.cpp  BoundaryCondition.hpp  CMakeLists_.txt  InitialCondition.cpp  InitialCondition.hpp  MatPtFluxBC.cpp  MatPtFluxBC.hpp  MatPtHeatFluxBC.cpp  MatPtHeatFluxBC.hpp  MatPtLoadBC.cpp  MatPtLoadBC.hpp  MatPtTractionBC.cpp  MatPtTractionBC.hpp  NodalConcBC.cpp  NodalConcBC.hpp  NodalTempBC.cpp  NodalTempBC.hpp  NodalValueBC.cpp  NodalValueBC.hpp  NodalVelBC.cpp  NodalVelBC.hpp  NodalVelGradBC.cpp  NodalVelGradBC.hpp
NairnMPM/src/Cracks/: ContourPoint.cpp  ContourPoint.hpp  CrackHeader.cpp  CrackHeader.hpp  CrackLeaf.cpp  CrackNode.cpp  CrackNode.hpp  CrackSegment.cpp  CrackSegment.hpp  CrackSurfaceContact.cpp  CrackSurfaceContact.hpp  CrossedCrack.cpp  CrossedCrack.hpp
NairnMPM/src/Custom_Tasks/: AdjustTimeStepTask.cpp  AdjustTimeStepTask.hpp  CalcJKTask.cpp  CalcJKTask.hpp  CarnotCycle.cpp  ConductionTask.cpp  ConductionTask.hpp  CustomTask.cpp  CustomTask.hpp  CustomThermalRamp.cpp  CustomThermalRamp.hpp  DeleteDamaged.cpp  DeleteDamaged.hpp  DiffusionTask.cpp  DiffusionTask.hpp  FluidSource.cpp  FluidSource.hpp  GridArchive.cpp  GridArchive.hpp  HistoryArchive.cpp  LoadControl.cpp  LoadControl.hpp  PeriodicXPIC.cpp  PeriodicXPIC.hpp  PhaseFieldDiffusion.cpp  PhaseFieldDiffusion.hpp  PropagateTask.cpp  PropagateTask.hpp  ReverseLoad.cpp  ReverseLoad.hpp  RigidContactForces.cpp  RigidContactForces.hpp  TrackError.cpp  TrackError.hpp  TransportTask.cpp  TransportTask.hpp  VTKArchive.cpp  VTKArchive.hpp
NairnMPM/src/Elements/: EightNodeIsoparamBrick.cpp  EightNodeIsoparamBrick.hpp  ElementBase3D.cpp  ElementBase3D.hpp  MoreMPMElementBase.cpp
NairnMPM/src/Exceptions/: MPMWarnings.cpp  MPMWarnings.hpp
NairnMPM/src/Global_Quantities/: BodyForce.cpp  BodyForce.hpp  GlobalQuantity.cpp  GlobalQuantity.hpp  ThermalRamp.cpp  ThermalRamp.hpp
NairnMPM/src/MPM_Classes/: MPMBase.cpp  MPMBase.hpp  MatPoint2D.cpp  MatPoint2D.hpp  MatPoint3D.cpp  MatPoint3D.hpp  MatPointAS.cpp  MatPointAS.hpp
NairnMPM/src/Materials/: AdhesionFriction.cpp  AdhesionFriction.hpp  AnisoPlasticity.cpp  AnisoPlasticity.cpp_  AnisoPlasticity.hpp  BistableIsotropic.cpp  BistableIsotropic.hpp  CamClayModified.cpp  CamClayModified.hpp  ClampedNeohookean.cpp  ClampedNeohookean.hpp  CohesiveZone.cpp  CohesiveZone.hpp  ContactLaw.cpp  ContactLaw.hpp  CoulombFriction.cpp  CoulombFriction.cpp_  CoulombFriction.hpp  CoupledSawTooth.cpp  CoupledSawTooth.cpp_  CoupledSawTooth.hpp  CubicTraction.cpp  CubicTraction.hpp  DDBHardening.cpp  DDBHardening.cpp_  DDBHardening.hpp  DbleExpSoftening.cpp  DbleExpSoftening.hpp  ElasticMPM.cpp  ElasticMatrixCamClay.cpp  ExponentialSoftening.cpp  ExponentialSoftening.cpp_  ExponentialSoftening.hpp  ExponentialTraction.cpp  ExponentialTraction.cpp_  ExponentialTraction.hpp  FailureSurface.cpp  FailureSurface.cpp_  FailureSurface.hpp  GeoMaterials.cpp  (+108 more)
NairnMPM/src/NairnMPM_Class/: ExtrapolateRigidBCsTask.cpp  ExtrapolateRigidBCsTask.hpp  GridForcesTask.cpp  (+44 more)
NairnMPM/tools/: CompareGlobal.cpp  CompareGlobal.hpp  ExtractMPM.1  ExtractMPM.cpp  ExtractMPM.hpp  makefile
(+2154 files in other folders)
