CMAKE_MINIMUM_REQUIRED (VERSION 3.0)


PROJECT (NairnMPM C CXX)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -O3")
add_definitions(-DMPM_CODE)
add_definitions(-DCONST_ARRAYS)
add_definitions(-DPOROELASTICITY)
add_definitions(-DRESTART_OPTION)
add_definitions(-DADJUST_COPIED_PK)


ADD_SUBDIRECTORY(src)
# ADD_SUBDIRECTORY(src/Cracks)
# ADD_SUBDIRECTORY(src/Elements)
# ADD_SUBDIRECTORY(src/Exceptions)
# ADD_SUBDIRECTORY(src/Nodes)
# ADD_SUBDIRECTORY(src/MPM_Classes)
# ADD_SUBDIRECTORY(src/NairnMPM_Class)
# ADD_SUBDIRECTORY(src/Patches)
# ADD_SUBDIRECTORY(src/Read_MPM)
# ADD_SUBDIRECTORY(src/System)


